[tool.poetry]
name = "python-aux"
version = "0.1.0"
description = ""
authors = ["fbjarkes <fbjarkes-github.q5706@aleeas.com>"]
readme = "README.md"
packages = [{include = "python_aux"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 180
skip-string-normalization = true


[tool.ruff]
line-length = 180
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
]
exclude = [
  "tests",
]