[tool.poetry]
name = "python-aux"
version = "0.0.1"
description = ""
authors = ["fbjarkes <fbjarkes-github.q5706@aleeas.com>"]
readme = "README.md"
packages = [{include = "python_aux"}]

[tool.poetry.dependencies]
python = "^3.9.5"
pandas = "^2.2.1"



[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 180
skip-string-normalization = true


[tool.ruff]
line-length = 180
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
]
exclude = [
  "tests",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 180

# Add MyPy
#[tool.mypy]
#strict = true
#files = [
#  "src",
#  "tests",
#]

#[tool.poetry.scripts]
#format = "black . &&  ruff . && isort ."